Nospoon (8 February 2002)
-------------------------
Merged Wanderers new create universe script
Nospoon (24 January 2002)
-------------------------
Added bounty System
Added multi run traderoutes
Added planetary apocalypse
Update FAQ

Version 0.3.1 released (5 January 2002)
-------------

SharpBlue (4 January 2002)
---------------------------
Finished language selection code
Finished internationalization of all files
Got rid of the old .php3 extension, to .php
Added a log entry when player captures a planet

Nospoon (2 January 2002)
---------------------------
Revised FAQ and newplayer guide, added it to CVS.
Fixed exploit allowing players to retrieve other players defences


SharpBlue (30 December 2001)
---------------------------
Finished the french translation.
Updated the new player code to give new players the number of turns
elapsed from the beginning of the game, capped at $max_turns.


Nospoon (16 December 2001)
---------------------------
Added code to drain energy from owners and corporate planets to support
fighters. Fixed bug that stopped players reverting corporate planets back
to personal planets.

Nospoon (15 December 2001)
-------------------------------
Sector fighters will degrade if there is no planet (owned or corproate)
to support the fighters.

SharpBlue (09 December 2001)
-------------------------------
Modified rankings generation to select only ships that aren't
destroyed. Speeds it up by over 50% on big games.


SharpBlue (06 December 2001)
-------------------------------
Log viewer admin module added.


SharpBlue (04 December 2001)
-------------------------------
New log services. The logs are now kept in the database instead
of in a file. Each event has a define in the global_funcs file,
with an attached text string in the language files. The log.php
file parses the log data and outputs an intelligible string.

Also played with DHTML for the log interface. Works fine in IE,
NS6 and Mozilla. DHTML is simply disabled for browsers that