@@ -1,6 +1,12 @@
 Nospoon (8 February 2002)
 -------------------------
-Merged Wanderers new create universe script
+Merged Wanders new create universe script
+Fixed number of torps firing to be 10%
+Ships on planets now fire the correct amount of torps
+Fixed exploits in teams
+Genesis device can destroy planets again
+
+
 Nospoon (24 January 2002)
 -------------------------
 Added bounty System
